BACKLOG-21899 : fix z-index when bar always displayed

--- a/src/javascript/JContent/EditFrame/Box.scss
+++ b/src/javascript/JContent/EditFrame/Box.scss
@@ -1,8 +1,15 @@
 .root {
     position: absolute;
-    z-index: 15000;
 
     pointer-events: none;
+}
+
+.defaultZIndex {
+    z-index: 15000;
+}
+
+.alwaysDisplayedZIndex {
+    z-index: auto;
 }
 
 .rel {
