--- a/src/javascript/JContent/EditFrame/EditFrame.scss
+++ b/src/javascript/JContent/EditFrame/EditFrame.scss
@@ -175,7 +175,7 @@
 }
 
 :global(.noprefix) .marginTop {
-    margin-top: 68px;
+    margin-top: 36px;
 }
 
 :global(.noprefix) .parentPadding {
